checkbox (0.17.4) UNRELEASED; urgency=low

  [ Po-Hsu Lin]
  * Move the volume key test to right after the mute key test.
  * scripts/graphics_driver: added a new pattern for parsing Intel driver on
    12.04.4 (LP: #1279222) 

  [ Jeff Lane ]
  * scripts/network: fail threshold for iperf is now an option and defaults to
    40%
  * jobs/ethernet.txt.in: modified multinic to fail on 80% threshold
  * Removed server-cert.whitelist.  Forked server-selftest.whitelist to have a
    new 14.04 only version for Trusty testing. This is the foundation for 14.04
    server cert changes.
  * Added usb3/storage-preinserted to server-selftest-14.04.whitelist

  [ Po-Hsu Lin]
  * jobs/power-management.txt.in: add product requirement for laptops into 
    the power-management/lid test case. (LP: #1270689)

  [ Rod Smith ]
  * Modified network test to fail on 80% rather than 40% of theoretical max
    speed.

  [Daniel Manrique]
  * jobs/graphics.txt.in: Use grep to work around bad exit codes from
    unity_support_test (LP: #1212618)
  * Added tests for 802.11ac networking, including environment variables for
    their settings, and updated whitelists accordingly.
  * scripts/sleep_test_log_check: Rewrote the parser logic to avoid missing
    failures due to file format changes (LP: #1201667)
  * parsers/udevadm: Added additional heuristics for video devices with
    PCI subclass "2", like newer NVidia GPUs (LP: #1270139)
  * checkbox/scripts/audio_settings: Place/read active_profiles in an
    absolute, known-writable location (LP: #1271707)
  * scripts/virtualization, scripts/network: Use specific environment
    variables for configuration, if available (LP: #1260507)
  * jobs/disk.txt.in: Remove max_diskspace* tests that are confusing and not
    used in any whitelist (LP: #1031997)

  [ Zygmunt Krynicki ]
  * Incremented changelog

 -- Daniel Manrique <roadmr@ubuntu.com>  Wed, 29 Jan 2014 17:07:13 -0500

checkbox (0.17.2) trusty; urgency=low

  [ Daniel Manrique ]