@@ -77,7 +77,6 @@ requires:
  device.category == 'WIRELESS'
  environment.ROUTERS == 'multiple'
  IEEE_80211.n == 'supported'
- IEEE_80211.band_5GHz == 'supported'
 user: root
 environ: WPA_N_SSID WPA_N_PSK
 command: trap "nmcli con delete id $WPA_N_SSID" EXIT; create_connection wifi $WPA_N_SSID --security=wpa --key=$WPA_N_PSK && gateway_ping_test --interface=`nmcli dev status | awk '/802-11-wireless/ {print $1}'`
@@ -92,7 +91,6 @@ requires:
  device.category == 'WIRELESS'
  environment.ROUTERS == 'multiple'
  IEEE_80211.n == 'supported'
- IEEE_80211.band_5GHz == 'supported'
 user: root
 environ: OPEN_N_SSID
 command: trap "nmcli con delete id $OPEN_N_SSID" EXIT; create_connection wifi $OPEN_N_SSID &&  gateway_ping_test --interface=`nmcli dev status | awk '/802-11-wireless/ {print $1}'`
